--- a/jpgMaker/jpgMaker.csproj
+++ b/jpgMaker/jpgMaker.csproj
@@ -44,27 +44,56 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cropping.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cropping.Designer.cs">
+      <DependentUpon>Cropping.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IPStream.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IPStream.Designer.cs">
+      <DependentUpon>IPStream.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Cropping.resx">
+      <DependentUpon>Cropping.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IPStream.resx">
+      <DependentUpon>IPStream.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -76,6 +105,24 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\DroidCam.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\Save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\ML.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\human.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\robot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\machine_learning.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
